; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_pack-objects.c_git_packbuilder_insert_commit.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_pack-objects.c_git_packbuilder_insert_commit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_packbuilder_insert_commit(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = call i64 @git_commit_lookup(i32** %6, i32 %9, i32* %10)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %18, label %13

13:                                               ; preds = %2
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %15 = load i32*, i32** %5, align 8
  %16 = call i64 @git_packbuilder_insert(%struct.TYPE_5__* %14, i32* %15, i32* null)
  %17 = icmp slt i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %13, %2
  store i32 -1, i32* %3, align 4
  br label %29

19:                                               ; preds = %13
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @git_commit_tree_id(i32* %21)
  %23 = call i64 @git_packbuilder_insert_tree(%struct.TYPE_5__* %20, i32 %22)
  %24 = icmp slt i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %19
  store i32 -1, i32* %3, align 4
  br label %29

26:                                               ; preds = %19
  %27 = load i32*, i32** %6, align 8
  %28 = call i32 @git_commit_free(i32* %27)
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %26, %25, %18
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @git_commit_lookup(i32**, i32, i32*) #1

declare dso_local i64 @git_packbuilder_insert(%struct.TYPE_5__*, i32*, i32*) #1

declare dso_local i64 @git_packbuilder_insert_tree(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @git_commit_tree_id(i32*) #1

declare dso_local i32 @git_commit_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
